--- a/.gitignore
+++ b/.gitignore
@@ -244,20 +244,14 @@ ModelManifest.xml
 # FAKE - F# Make
 .fake/
 
-#
-# Umbraco
-#
-
-src/{{ client }}.Umbraco/App_Data/TEMP/
-src/{{ client }}.Umbraco/App_Data/preview/
-src/{{ client }}.Umbraco/App_Data/umbraco.config
-src/{{ client }}.Umbraco/aspnet_client/
-src/{{ client }}.Umbraco/media/
-
-
-#
-# Compiled Assets
-#
-
-src/{{ client }}.Umbraco/scripts/application.js
-src/{{ client }}.Umbraco/css/application.css
+# Umbraco 
+obj
+_ReSharper.*
+*.csproj.user
+*.resharper.user
+*.resharper
+*.suo
+*.cache
+*.Publish.xml
+~$* 
+App_Data
